# bodge-sndfile

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  autowrap.lisp  bodge-sndfile-bindings.asd  bodge-sndfile.asd  bodge_sndfile.h  claw.lisp  example.lisp  libsndfile.lisp  main.lisp  packages.lisp
bindings/: powerpc64le-pc-linux-gnu.lisp  x86_64-apple-darwin-gnu.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
example/: example.lisp
lib/: CMakeLists.txt  Makefile
spec/: bodge_sndfile.i686-apple-darwin-gnu.spec  bodge_sndfile.i686-pc-linux-gnu.spec  bodge_sndfile.i686-pc-windows-gnu.spec  bodge_sndfile.i686-pc-windows-msvc.spec  bodge_sndfile.x86_64-apple-darwin-gnu.spec  bodge_sndfile.x86_64-pc-linux-gnu.spec  bodge_sndfile.x86_64-pc-windows-gnu.spec  bodge_sndfile.x86_64-pc-windows-msvc.spec  lib.arm-pc-linux-gnu.spec  lib.i386-unknown-freebsd.spec  lib.i386-unknown-openbsd.spec  lib.i686-apple-darwin-gnu.spec  lib.i686-apple-darwin9.spec  lib.i686-pc-linux-gnu.spec  lib.i686-pc-windows-gnu.spec  lib.i686-pc-windows-msvc.spec  lib.x86_64-apple-darwin-gnu.spec  lib.x86_64-apple-darwin9.spec  lib.x86_64-pc-linux-gnu.spec  lib.x86_64-pc-windows-gnu.spec  lib.x86_64-pc-windows-msvc.spec  lib.x86_64-unknown-freebsd.spec  lib.x86_64-unknown-openbsd.spec
src/: claw.lisp  packages.lisp  sndfile.lisp
src/lib/: .gitignore  Makefile
src/spec/: BODGE-SNDFILE.i686-apple-darwin-gnu.spec  BODGE-SNDFILE.i686-pc-linux-gnu.spec  BODGE-SNDFILE.i686-pc-windows-gnu.spec  (+3 more)
util/: update-specs.sh
